Refactor SOS button layout and restore navigation link to Responder Page

--- a/sos-app/src/app/sos-button/sos-button.html
+++ b/sos-app/src/app/sos-button/sos-button.html
@@ -1,4 +1,3 @@
-</div>
 <div class="nav-responder">
   <a routerLink="/responder">Go to Responder Page</a>
 </div>
@@ -29,5 +28,8 @@
         <button (click)="sendSOS()" class="btn-confirm">Confirm</button>
       </div>
     </div>
+  </div>
+  <div class="nav-responder">
+    <a routerLink="/responder">Go to Responder Page</a>
   </div>
 </div>
