Refactor routing configuration and update navigation links in the application

--- a/sos-app/src/app/app.html
+++ b/sos-app/src/app/app.html
@@ -1,3 +1,8 @@
+
+<nav class="global-nav">
+  <a routerLink="/">SOS Button</a> |
+  <a routerLink="/responder">Responder</a>
+</nav>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
