--- a/sos-app/src/app/responder/responder.html
+++ b/sos-app/src/app/responder/responder.html
@@ -20,12 +20,21 @@
 		</div>
 		<div class="alerts-list">
 			<h3>Active SOS Alerts</h3>
-			<ul>
-				<li *ngFor="let alert of alerts">
-					<strong>ID:</strong> {{ alert.id }} | <strong>Lat:</strong> {{ alert.lat }} | <strong>Lon:</strong> {{ alert.lon }} | <strong>Time:</strong> {{ alert.timestamp | date:'short' }}
-				</li>
-			</ul>
+			<div class="alerts-card">
+				<ul>
+					<li *ngFor="let alert of alerts" class="alert-item">
+						<div>
+							<span class="alert-id">ID: {{ alert.id }}</span>
+							<span class="alert-coords">Lat: {{ alert.lat }} | Lon: {{ alert.lon }}</span>
+							<span class="alert-time">Time: {{ alert.timestamp | date:'short' }}</span>
+						</div>
+					</li>
+				</ul>
+				<div *ngIf="alerts.length === 0" class="no-alerts">No active SOS alerts.</div>
+			</div>
 		</div>
-		<div id="map"></div>
+		<div class="map-container">
+			<div id="map"></div>
+		</div>
 	</div>
 </div>
